--- a/.github/workflows/plan-drift.yml
+++ b/.github/workflows/plan-drift.yml
@@ -23,7 +23,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.22.0
         #if: steps.plan.outputs.exitcode == 0
         with:
-          channel-id: 'CHANNEL_ID,ANOTHER_CHANNEL_ID'
+          channel-id: 'CHKHZ82PR'
           payload: |
             {
               "blocks": [
