--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -18,26 +18,18 @@ jobs:
       - id: repository
         run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
 
-      - name: Post to a Slack channel
+      - name: Send custom JSON data to Slack workflow
         id: slack
         uses: slackapi/slack-github-action@v1.23.0
-        #if: steps.plan.outputs.exitcode == 0
         with:
-          channel-id: 'CHKHZ82PR'
+          # This data can be any valid JSON from a previous step in the GitHub Action
           payload: |
             {
-              "blocks": [
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
-                  }
-                }
-              ]
+              "key": "value",
+              "foo": "bar"
             }
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
       # - name: Slack Notification Drift
       #   uses: lazy-actions/slatify@master
