--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -57,6 +57,7 @@ jobs:
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
       # - name: Slack Notification Drift
       #   uses: lazy-actions/slatify@master
