--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -38,11 +38,11 @@ jobs:
                   "fields": [
                     {
                       "type": "mrkdwn",
-                      "text": "*Repository:*\n${{ env.REPOSITORY_NAME }}"
+                      "text": "*Repository:*\n ${{ github.event.repository.name }} ${{ env.REPOSITORY_NAME }}"
                     },
                     {
                       "type": "mrkdwn",
-                      "text": "*Branch:*\n${{ github.ref_name }}"
+                      "text": "*Branch:*\n${{ GITHUB_REF_NAME }} ${{ github.ref_name }}"
                     }
                   ]
                 },
