--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -15,6 +15,12 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@v3
 
+      - env:
+          EVENT_CONTEXT: ${{ toJSON(github.event) }}
+        run: |
+          echo $GITHUB_REPOSITORY
+          echo $EVENT_CONTEXT
+
       - id: repository
         run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
 
@@ -42,7 +48,7 @@ jobs:
                     },
                     {
                       "type": "mrkdwn",
-                      "text": "*Branch:*\n${GITHUB_REF_NAME} ${{ github.ref_name }}"
+                      "text": "*Branch:*\n${{ github.ref_name }}"
                     }
                   ]
                 },
