--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -63,7 +63,7 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
-          REPOSITORY: ${GITHUB_REPOSITORY}
+          REPOSITORY: ${{ env.GITHUB_REPOSITORY }}
 
       # - name: Slack Notification Drift
       #   uses: lazy-actions/slatify@master
