--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -8,7 +8,9 @@ jobs:
   slack:
     name: 'Slack'
     runs-on: ubuntu-latest
-
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v3
@@ -17,6 +19,9 @@ jobs:
           EVENT_CONTEXT: ${{ toJSON(github.event) }}
         run: |
           echo $EVENT_CONTEXT | jq -r
+
+      - id: repository
+        run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
 
       - name: Send custom JSON data to Slack workflow
         id: slack
@@ -30,7 +35,7 @@ jobs:
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "[Header] :rocket: Title"
+                    "text": "header"
                   }
                 },
                 {
