--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -3,14 +3,13 @@ on:
   workflow_dispatch:
   push:
     branches:
+      - actions-slack
 
 jobs:
   slack:
     name: 'Slack'
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
+
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v3
@@ -19,9 +18,6 @@ jobs:
           EVENT_CONTEXT: ${{ toJSON(github.event) }}
         run: |
           echo $EVENT_CONTEXT | jq -r
-
-      - id: repository
-        run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
 
       - name: Send custom JSON data to Slack workflow
         id: slack
