--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -3,13 +3,14 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - actions-slack
 
 jobs:
   slack:
     name: 'Slack'
     runs-on: ubuntu-latest
-
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v3
