--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -32,10 +32,10 @@ jobs:
         run: |
           echo $GITHUB_WORKFLOW_URL
         env:
-          GITHUB_WORKFLOW_URL: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          GITHUB_WORKFLOW_URL: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/"
 
       - name: Send custom JSON data to Slack workflow
-        id: slack
+        id: slack-payload-webhook-url
         uses: slackapi/slack-github-action@v1.23.0
         with:
           # This data can be any valid JSON from a previous step in the GitHub Action
@@ -66,7 +66,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "<http://github.com|View>"
+                    "text": "<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/|View Workflow>"
                   }
                 }
               ]
