--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -83,7 +83,7 @@ jobs:
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
           # #sandbox
-          channel-id: CHKHZ82PR
+          channel-id: 'CHKHZ82PR'
           # For posting a simple plain text message
           slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
         env:
