--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -98,9 +98,10 @@ jobs:
           channel-id: 'CHKHZ82PR'
           payload: |
             {
+              "icon_emoji": ":rocket:"
               "attachments": [
                 {
-                  "text": "test"
+                  "text": "slack-bot-token-2"
                 }
               ]
             }
