--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -99,6 +99,7 @@ jobs:
           payload: |
             {
               "icon_emoji": ":rocket:",
+              "username": "slack-bot-token-2",
               "attachments": [
                 {
                   "text": "slack-bot-token-2"
