--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -107,7 +107,8 @@ jobs:
               ]
             }
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
       # - name: Slack Notification Drift
       #   uses: lazy-actions/slatify@master
