--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -111,8 +111,7 @@ jobs:
               ]
             }
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
       # - name: Slack Notification Drift
       #   uses: lazy-actions/slatify@master
