--- a/.github/workflows/steps-failure.yml
+++ b/.github/workflows/steps-failure.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           ./test3.sh
           exitcode=$?
+          echo $exitcode
           echo "::set-output name=exitcode::$exitcode"
           exit 0
 
