--- a/.github/workflows/steps-failure.yml
+++ b/.github/workflows/steps-failure.yml
@@ -29,16 +29,17 @@ jobs:
         id: test3
         continue-on-error: true
         run: |
-          echo echo "::set-output name=exitcode::world"
           ./test3.sh
-          echo "TEST3"
           exitcode=$?
           echo $exitcode
+          echo echo "::set-output name=exitcode::world"
 
-
-      - name: Show outputs
+      - id: step1
         run: |
-          echo "${{ steps.test3.outputs.exitcode }}"
+          echo "::set-output name=test::hello"
+      - id: step2
+        run: |
+          echo "::set-output name=test::world"
 
       - name: Dump steps context
         run: |
