--- a/.github/workflows/steps-failure.yml
+++ b/.github/workflows/steps-failure.yml
@@ -29,7 +29,10 @@ jobs:
         id: test3
         continue-on-error: true
         run: |
-          echo echo "::set-output name=exitcode::world"
+          ./test3.sh
+          exitcode=$?
+          echo $exitcode
+          echo "::set-output name=exitcode::world"
 
       - id: step1
         run: |
