--- a/.github/workflows/steps-failure.yml
+++ b/.github/workflows/steps-failure.yml
@@ -36,6 +36,7 @@ jobs:
           ./test3.sh
           exitcode=$?
           echo "TEST3_EXITCODE=$exitcode >> $GITHUB_ENV"
+          ###    run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
 
       - name: Test3 check exit code is 1
         if: steps.test3.outputs.exitcode == 1
