--- a/.github/workflows/steps-failure.yml
+++ b/.github/workflows/steps-failure.yml
@@ -30,17 +30,17 @@ jobs:
       - name: Test1 check exit code is 0
         run: |
           echo "TEST1 exitcode is 0"
-#        if: step.test1.outputs.exitcode == 0
+        if: steps.test1.outputs.exitcode == 0
 
       - name: Test2 check exit code is 1
         run: |
           echo "TEST2 exitcode is 1"
-        if: step.test2.outputs.exitcode == 1
+        if: steps.test2.outputs.exitcode == 1
 
       - name: Test3 check exit code is 2
         run: |
           echo "TEST3 exitcode is 2"
-        if: step.test3.outputs.exitcode == 2
+        if: steps.test3.outputs.exitcode == 2
 
       - name: Steps context
         run: |
