--- a/.github/workflows/slack-workflow.yml
+++ b/.github/workflows/slack-workflow.yml
@@ -1,4 +1,5 @@
 # /github subscribe n0ts/git_practice workflows:{name:"GitHub Actions Slack" event:"push" branch:"workflow-slack" actor:"n0ts"}
+# /github subscribe n0ts/git_practice workflows:{name:"GitHub Actions Slack" branch:"workflow-slack" actor:"test"}
 name: GitHub Actions Slack
 
 on:
@@ -17,5 +18,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Run Hello, World
-        run: echo Hello, World
+      - name: Run Hello, World, Slack
+        run: echo Hello, World, Slack
